# EchoBot

./: .gitignore  IMPLEMENTATION_PLAN.md  PROJECT_SKETCH.md  README.md  pyproject.toml  requirements.txt  sample.txt
src/text_to_audio_mcp/: __init__.py  config.py  gui.py  io_utils.py  server.py  tts.py
tests/: test_gui.py  test_io_utils.py  test_server.py  test_tts.py
