[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "text-to-audio-mcp"
version = "0.1.0"
description = "MCP server that converts text into speech audio via edge-tts."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "dmitryaleks" }]
dependencies = [
    "mcp[cli]>=1.2",
    "edge-tts>=6.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "pytest-asyncio>=0.23",
]

[project.scripts]
text-to-audio-mcp = "text_to_audio_mcp.server:main"

[tool.hatch.build.targets.wheel]
packages = ["src/text_to_audio_mcp"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
    "network: tests that require internet access (edge-tts upstream).",
]
